# TerminatorClient

./: .gitignore  Terminator_client.sln
Terminator_client/: CMakeLists.txt  CMakeSettings.json  Terminator_client.qrc  Terminator_client.vcxproj  Terminator_client.vcxproj.filters  cpp.hint  main.cpp
Terminator_client/forms/: loginwindow.ui  mainwindow.ui  newuser.ui  sendtouser.ui
Terminator_client/forms/listForm/: listform.cpp  listform.h  listform.ui
Terminator_client/forms/loginWindow/: loginwindow.cpp  loginwindow.ui
Terminator_client/forms/mainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Terminator_client/forms/newUserWindow/: newuser.ui
Terminator_client/forms/sendToUserWindow/: sendtouser.cpp  sendtouser.h  sendtouser.ui
Terminator_client/forms/taskForm/: taskform.cpp  taskform.h  taskform.h.autosave  taskform.ui
Terminator_client/include/: mainwindow.h  network.h  sendtouser.h
Terminator_client/source/: loginwindow.cpp  main.cpp  mainwindow.cpp  network.cpp
Terminator_client/src/: Terminator_client.qrc  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  network.cpp  network.h
Terminator_client/src/dialogSelectUser/: dialogSelectUser.ui  dialogselectuser.cpp  dialogselectuser.h  getusernickname.cpp  getusernickname.h  getusernickname.ui  newuser.cpp  newuser.h  newuser.h.autosave  newuser.ui  sendtouser.h
Terminator_client/src/loginWindow/: loginwindow.cpp  loginwindow.h
Terminator_client/src/loginWindows/: loginwindow.cpp  loginwindow.h  loginwindow.ui
Terminator_client/src/mainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Terminator_client/src/networkClass/: network.cpp  network.h
Terminator_client/src/newUser/: newuser.cpp  newuser.h  newuser.ui
